_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/stack.md
<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../../cirriculumn/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<a href="untitled-7.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="industry-standard-algorithms.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Industry Standard Algorithms</span></a>

<a href="interview-practice-resources.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Practice Resources</span></a>

<a href="overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<a href="stack.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span></a>

<a href="queue.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span></a>

<a href="queue-sandbox.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue Sandbox</span></a>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<a href="bst-explained.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">BST Explained</span></a>

<a href="binary-tree.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Tree</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<a href="untitled-5.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<a href="untitled-2.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span></a>

<a href="untitled-1.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span></a>

<a href="untitled.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Stack</span>
==========================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="1563ecc4880e479cb6eb4638f012f9ec"><span data-offset-key="1563ecc4880e479cb6eb4638f012f9ec:0">Stack in Python -</span></span></span>

> <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="39d5338057824378a9126bdc5feaa364"><span data-offset-key="39d5338057824378a9126bdc5feaa364:0">A Computer Science portal for geeks. It contains well written, well thought and well explained computer science and programming articles, quizzes and practice/competitive programming/company interview Questions.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0dc20bc6a8e3473c89704d979a26c69a"><span data-offset-key="0dc20bc6a8e3473c89704d979a26c69a:0">A stack is a linear data structure that stores items in a Last-In/First-Out (LIFO) or First-In/Last-Out (FILO) manner. In stack, a new element is added at one end and an element is removed from that end only. The insert and delete operations are often called push and pop.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7c1db8bd1d9641fb95cab44f49c14f94"><span data-offset-key="7c1db8bd1d9641fb95cab44f49c14f94:0">The functions associated with stack are:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="047ebbb8980348509a8444286372d5b7"><span data-offset-key="047ebbb8980348509a8444286372d5b7:0">**empty()**</span><span data-offset-key="047ebbb8980348509a8444286372d5b7:1"> – Returns whether the stack is empty – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f4346c8d7f1549f0ac98ca730708482b"><span data-offset-key="f4346c8d7f1549f0ac98ca730708482b:0">**size()**</span><span data-offset-key="f4346c8d7f1549f0ac98ca730708482b:1"> – Returns the size of the stack – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8c04f3924fe44507a50ea65a1e985a99"><span data-offset-key="8c04f3924fe44507a50ea65a1e985a99:0">**top()**</span><span data-offset-key="8c04f3924fe44507a50ea65a1e985a99:1"> – Returns a reference to the topmost element of the stack – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5c7f76533cda41a1be42148532341c60"><span data-offset-key="5c7f76533cda41a1be42148532341c60:0">**push(a)**</span><span data-offset-key="5c7f76533cda41a1be42148532341c60:1"> – Inserts the element ‘a’ at the top of the stack – Time Complexity: O(1)</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9a213ffb2f7547dbbf52c10b66291c9a"><span data-offset-key="9a213ffb2f7547dbbf52c10b66291c9a:0">**pop()**</span><span data-offset-key="9a213ffb2f7547dbbf52c10b66291c9a:1"> – Deletes the topmost element of the stack – Time Complexity: O(1)</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="20a83d7fc9dc4616b649594d42b7e108"><span data-offset-key="20a83d7fc9dc4616b649594d42b7e108:0">Implementation</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="81ddfe9a8e9b44f7ba45225cdcd887d4"><span data-offset-key="81ddfe9a8e9b44f7ba45225cdcd887d4:0">There are various ways from which a stack can be implemented in Python. This article covers the implementation of a stack using data structures and modules from the Python library. Stack in Python can be implemented using the following ways:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="439c97e4d0fb47008fdfe6f2e4a2f2c9"><span data-offset-key="439c97e4d0fb47008fdfe6f2e4a2f2c9:0">list</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d640402889e2490ea2ed7b48dabca66d"><span data-offset-key="d640402889e2490ea2ed7b48dabca66d:0">Collections.deque</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="199da7580aec48afbb7e316dddf92684"><span data-offset-key="199da7580aec48afbb7e316dddf92684:0">queue.LifoQueue</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="19d6e75de47044dda7d350b4e9f6057f"><span data-offset-key="19d6e75de47044dda7d350b4e9f6057f:0">Implementation using list:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cf70ea82532144999240b0aff1c57dae"><span data-offset-key="cf70ea82532144999240b0aff1c57dae:0">Python’s built-in data structure list can be used as a stack. Instead of push(), append() is used to add elements to the top of the stack while pop() removes the element in LIFO order. Unfortunately, the list has a few shortcomings. The biggest issue is that it can run into speed issues as it grows. The items in the list are stored next to each other in memory, if the stack grows bigger than the block of memory that currently holds it, then Python needs to do some memory allocations. This can lead to some append() calls taking much longer than other ones.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3e5385ba0a3749fd9ba348156184316c"><span data-offset-key="3e5385ba0a3749fd9ba348156184316c:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="171c9a126f584443ae109c8a1a31ba08"><span data-offset-key="171c9a126f584443ae109c8a1a31ba08:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # Python program to# demonstrate stack implementation# using list​​stack = []​# append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c')​print('Initial stack')print(stack)​# pop() function to pop# element from stack in# LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop())​print('\nStack after elements are popped:')print(stack)​# uncommenting print(stack.pop())# will cause an IndexError# as the stack is now empty​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8a1e7230237b4498a933a5a4c79c534a"><span data-offset-key="8a1e7230237b4498a933a5a4c79c534a:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="88e6ca60e5594e55aa6b00a16f949ccd"><span data-offset-key="88e6ca60e5594e55aa6b00a16f949ccd:0">Initial stack \['a', 'b', 'c'\]</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fb1fba2d231f47b186de0deaf79ca2e2"><span data-offset-key="fb1fba2d231f47b186de0deaf79ca2e2:0">Elements popped from stack: c b a</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6909b6b45ff14d67bb02bc62f46ad8b7"><span data-offset-key="6909b6b45ff14d67bb02bc62f46ad8b7:0">Stack after elements are popped: \[\]</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9ada3f45155d43d58e29c7274d336baa"><span data-offset-key="9ada3f45155d43d58e29c7274d336baa:0">Traceback (most recent call last): File "/home/2426bc32be6a59881fde0eec91247623.py", line 25, in print(stack.pop()) IndexError: pop from empty list</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="b81964afe599437688add81ecfed58e1"><span data-offset-key="b81964afe599437688add81ecfed58e1:0">Implementation using collections.deque:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b48bb57427c440a0acbf8ee9dd339931"><span data-offset-key="b48bb57427c440a0acbf8ee9dd339931:0">Python stack can be implemented using the deque class from the collections module. Deque is preferred over the list in the cases where we need quicker append and pop operations from both the ends of the container, as deque provides an O(1) time complexity for append and pop operations as compared to list which provides O(n) time complexity. The same methods on deque as seen in the list are used, append() and pop().</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7128b148647a4a1583e88e2eac405098"><span data-offset-key="7128b148647a4a1583e88e2eac405098:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7c1483aa5e4f4c28b8a9be40759ba1e0"><span data-offset-key="7c1483aa5e4f4c28b8a9be40759ba1e0:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # Python program to# demonstrate stack implementation# using collections.deque  from Collections import deque stack = deque() # append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c') print('Initial stack:')print(stack) # pop() function to pop# element from stack in# LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop()) print('\nStack after elements are popped:')print(stack) # uncommenting print(stack.pop()) # will cause an IndexError# as the stack is now empty

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c22451ac7cfe4d45a20b340b60ae0fa7"><span data-offset-key="c22451ac7cfe4d45a20b340b60ae0fa7:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a7aa91594084479f8b32b89f879813e8"><span data-offset-key="a7aa91594084479f8b32b89f879813e8:0">Initial stack: deque(\['a', 'b', 'c'\])</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ec68ac15959647d4bee523f190414b61"><span data-offset-key="ec68ac15959647d4bee523f190414b61:0">Elements popped from stack: c b a</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="125cc3aef6ac4dea861f7cb6566f761f"><span data-offset-key="125cc3aef6ac4dea861f7cb6566f761f:0">Stack after elements are popped: deque(\[\])</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2e1f58520c6a42b2a569c0788a682fdb"><span data-offset-key="2e1f58520c6a42b2a569c0788a682fdb:0">Traceback (most recent call last): File "/home/97171a8f6fead6988ea96f86e4b01c32.py", line 29, in print(stack.pop()) IndexError: pop from an empty deque</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="fa879894fa70452d922b9730d2ec6755"><span data-offset-key="fa879894fa70452d922b9730d2ec6755:0">Implementation using queue module</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6abe5eb9744b45c88c7a670e742f50ac"><span data-offset-key="6abe5eb9744b45c88c7a670e742f50ac:0">Queue module also has a LIFO Queue, which is basically a Stack. Data is inserted into Queue using the put() function and get() takes data out from the Queue.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="68e1c80d68d8459683fff4a2e10e26b5"><span data-offset-key="68e1c80d68d8459683fff4a2e10e26b5:0">There are various functions available in this module:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="39d7d2bfe8b849cba0604b45fbaff3c5"><span data-offset-key="39d7d2bfe8b849cba0604b45fbaff3c5:0">**maxsize**</span><span data-offset-key="39d7d2bfe8b849cba0604b45fbaff3c5:1"> – Number of items allowed in the queue.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="65ee142eae354fd6a75bda56b4cd9ad8"><span data-offset-key="65ee142eae354fd6a75bda56b4cd9ad8:0">**empty()**</span><span data-offset-key="65ee142eae354fd6a75bda56b4cd9ad8:1"> – Return True if the queue is empty, False otherwise.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4d363ed230f64cbcb1fdf39d50dad878"><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:0">**full()**</span><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:1"> – Return True if there are </span><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:2">*maxsize*</span><span data-offset-key="4d363ed230f64cbcb1fdf39d50dad878:3"> items in the queue. If the queue was initialized with maxsize=0 (the default), then full() never returns True.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="866af51db4574d06a7d65db33580d317"><span data-offset-key="866af51db4574d06a7d65db33580d317:0">**get()**</span><span data-offset-key="866af51db4574d06a7d65db33580d317:1"> – Remove and return an item from the queue. If the queue is empty, wait until an item is available.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6b3446febc584551a8f443bbd7ce5769"><span data-offset-key="6b3446febc584551a8f443bbd7ce5769:0">**get\_nowait()**</span><span data-offset-key="6b3446febc584551a8f443bbd7ce5769:1"> – Return an item if one is immediately available, else raise QueueEmpty.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="469e07249aa24b0aac9298d1a7e271f1"><span data-offset-key="469e07249aa24b0aac9298d1a7e271f1:0">**put(item)**</span><span data-offset-key="469e07249aa24b0aac9298d1a7e271f1:1"> – Put an item into the queue. If the queue is full, wait until a free slot is available before adding the item.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a7fb5c8b0aff4798af512178d4ff5791"><span data-offset-key="a7fb5c8b0aff4798af512178d4ff5791:0">**put\_nowait(item)**</span><span data-offset-key="a7fb5c8b0aff4798af512178d4ff5791:1"> – Put an item into the queue without blocking.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="765fd37eda6245cea17e18624035b2fb"><span data-offset-key="765fd37eda6245cea17e18624035b2fb:0">**qsize()**</span><span data-offset-key="765fd37eda6245cea17e18624035b2fb:1"> – Return the number of items in the queue. If no free slot is immediately available, raise QueueFull.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c310f45a4aa14b708bb2d465d520860d"><span data-offset-key="c310f45a4aa14b708bb2d465d520860d:0">Python3</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="5884e6d55bab48889c84f386926664e9"><span data-offset-key="5884e6d55bab48889c84f386926664e9:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0fa5517da488456fba6e9fd451f48e8c"><span data-offset-key="0fa5517da488456fba6e9fd451f48e8c:0">`​`</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b70828a85a084f27a4af470086684044"><span data-offset-key="b70828a85a084f27a4af470086684044:0">`​`</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1abd9c2c28964d6d96b71e2bced4b814"><span data-offset-key="1abd9c2c28964d6d96b71e2bced4b814:0">`​`</span></span></span>

    # Python program to# demonstrate stack implementation# using queue module  from queue import LifoQueue # Initializing a stackstack = LifoQueue(maxsize = 3) # qsize() show the number of elements# in the stackprint(stack.qsize())  # put() function to push# element in the stackstack.put('a')stack.put('b')stack.put('c') print("Full: ", stack.full())print("Size: ", stack.qsize()) # get() function to pop# element from stack in# LIFO orderprint('\nElements popped from the stack')print(stack.get())print(stack.get())print(stack.get()) print("\nEmpty: ", stack.empty())

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7823b2c542e3448fbd5638b157e7f252"><span data-offset-key="7823b2c542e3448fbd5638b157e7f252:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="eb75e49185f441cb8649e25442612d6b"><span data-offset-key="eb75e49185f441cb8649e25442612d6b:0">0 Full: True Size: 3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3b3f2fca164a4ec1a9009e06d434d3e3"><span data-offset-key="3b3f2fca164a4ec1a9009e06d434d3e3:0">Elements popped from the stack c b a</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dc84d060a96149e4bde3e38afc2fb5af"><span data-offset-key="dc84d060a96149e4bde3e38afc2fb5af:0">Empty: True</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="51b83db63f2b4b57bd42942cc90f4d63"><span data-offset-key="51b83db63f2b4b57bd42942cc90f4d63:0">Implementation using singly linked list:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9625555d043241568281fcff198ffdec"><span data-offset-key="9625555d043241568281fcff198ffdec:0">The linked list has two methods addHead(item) and removeHead() that run in constant time. These two methods are suitable to implement a stack.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a083f97d0fb844b2a1ee69dff495b816"><span data-offset-key="a083f97d0fb844b2a1ee69dff495b816:0">**getSize()**</span><span data-offset-key="a083f97d0fb844b2a1ee69dff495b816:1">– Get the number of items in the stack.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f167a5966afe4c1ebde8f2a2a07af34a"><span data-offset-key="f167a5966afe4c1ebde8f2a2a07af34a:0">**isEmpty()**</span><span data-offset-key="f167a5966afe4c1ebde8f2a2a07af34a:1"> – Return True if the stack is empty, False otherwise.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8de8bad570e34fd1bb283f4beaacb88a"><span data-offset-key="8de8bad570e34fd1bb283f4beaacb88a:0">**peek()**</span><span data-offset-key="8de8bad570e34fd1bb283f4beaacb88a:1"> – Return the top item in the stack. If the stack is empty, raise an exception.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="537f06c197fe41e09ccd56b7c31fc480"><span data-offset-key="537f06c197fe41e09ccd56b7c31fc480:0">**push(value)**</span><span data-offset-key="537f06c197fe41e09ccd56b7c31fc480:1"> – Push a value into the head of the stack.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="53bfb0961b69400680b8435a5a23526c"><span data-offset-key="53bfb0961b69400680b8435a5a23526c:0">**pop()**</span><span data-offset-key="53bfb0961b69400680b8435a5a23526c:1"> – Remove and return a value in the head of the stack. If the stack is empty, raise an exception.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f5adb0c4280a4818bfb2c5af3c5c5a09"><span data-offset-key="f5adb0c4280a4818bfb2c5af3c5c5a09:0">Below is the implementation of the above approach:</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="582c0855c8b04e228299ade258261900"><span data-offset-key="582c0855c8b04e228299ade258261900:0">Python3</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e43012d3f5c04f77b6b2e9268c7a9412"><span data-offset-key="e43012d3f5c04f77b6b2e9268c7a9412:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a8ae75d7db8f4f62b3194db4798e3ee1"><span data-offset-key="a8ae75d7db8f4f62b3194db4798e3ee1:0"><span data-slate-zero-width="n">​</span></span></span></span>

    # Python program to demonstrate# stack implementation using a linked list.# node classclass Node:   def __init__(self, value):      self.value = value      self.next = None class Stack:       # Initializing a stack.   # Use a dummy node, which is   # easier for handling edge cases.   def __init__(self):      self.head = Node("head")      self.size = 0    # String representation of the stack   def __str__(self):      cur = self.head.next      out = ""      while cur:         out += str(cur.value) + "->"         cur = cur.next      return out[:-3]      # Get the current size of the stack   def getSize(self):      return self.size       # Check if the stack is empty   def isEmpty(self):      return self.size == 0       # Get the top item of the stack   def peek(self):             # Sanitary check to see if we      # are peeking an empty stack.      if self.isEmpty():         raise Exception("Peeking from an empty stack")      return self.head.next.value    # Push a value into the stack.   def push(self, value):      node = Node(value)      node.next = self.head.next      self.head.next = node      self.size += 1         # Remove a value from the stack and return.   def pop(self):      if self.isEmpty():         raise Exception("Popping from an empty stack")      remove = self.head.next      self.head.next = self.head.next.next      self.size -= 1      return remove.value # Driver Codeif __name__ == "__main__":   stack = Stack()   for i in range(1, 11):      stack.push(i)   print(f"Stack: {stack}")    for _ in range(1, 6):      remove = stack.pop()      print(f"Pop: {remove}")   print(f"Stack: {stack}")

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="af01a704c22d490eab71a54e1d60b9af"><span data-offset-key="af01a704c22d490eab71a54e1d60b9af:0">**Output:**</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1a0f0c08fe9549d68c022e8740a248b2"><span data-offset-key="1a0f0c08fe9549d68c022e8740a248b2:0">Stack: 10 -&gt; 9 -&gt; 8 -&gt; 7 -&gt; 6 -&gt; 5 -&gt; 4 -&gt; 3 -&gt; 2 -&gt; 1</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1a849dea33df40af8ec6afe7730bb227"><span data-offset-key="1a849dea33df40af8ec6afe7730bb227:0">Pop: 10 Pop: 9 Pop: 8 Pop: 7 Pop: 6</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="224be898f92b4b608be40e90ee1850b8"><span data-offset-key="224be898f92b4b608be40e90ee1850b8:0">Stack: 5 -&gt; 4 -&gt; 3 -&gt; 2 -&gt; 1</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c41a6df2c35f4254b2eae4f387fd2fdb"><span data-offset-key="c41a6df2c35f4254b2eae4f387fd2fdb:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4cc274268d434fdeb630bba15dd4b764"><span data-offset-key="4cc274268d434fdeb630bba15dd4b764:0"><span data-slate-zero-width="n">​</span></span></span></span>

    ​# Python program to# demonstrate stack implementation# using list  stack = [] # append() function to push# element in the stackstack.append('a')stack.append('b')stack.append('c') print('Initial stack')print(stack) # pop() function to pop# element from stack in# LIFO orderprint('\nElements popped from stack:')print(stack.pop())print(stack.pop())print(stack.pop()) print('\nStack after elements are popped:')print(stack) # uncommenting print(stack.pop()) # will cause an IndexError# as the stack is now empty

<a href="array/extra-array.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Extra-Array</span>

<a href="queue.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Queue</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 2 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/practice/untitled/stack.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="stack.html#stack-in-python" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Stack in Python -</span></span>

<a href="stack.html#implementation" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Implementation</span></span>

<a href="stack.html#python3" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Python3</span></span>
